# Predicting-Listing-Gains-in-the-Indian-IPO-Market-Using-PyTorch

./: README.md  collection.py  debug_response.html  main.py  model.py  preprocessing.py  pyproject.toml  train.py
data_processed/: ipo_tracker.csv  ipo_tracker_cleaned.csv  test_data.pt  train_data.pt
models/: scaler_X.pkl  scaler_Y.pkl  stock_price_predictor.pth
